--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "country-state-city": "^1.0.4",
+    "dotenv": "^8.2.0",
     "express": "^4.16.3",
     "express-fileupload": "^1.1.6",
     "express-handlebars": "^5.1.0",
