--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "password-validator": "^5.0.3",
+    "qrcode": "^1.4.4",
     "read-excel-file": "^4.0.6",
     "stream": "0.0.2",
     "stream-to-blob": "^2.0.1",
