--- a/config/config.env
+++ b/config/config.env
@@ -17,3 +17,8 @@ SMTP_EMAIL=a711010bcc8e8b
 SMTP_PASSWORD=0cb352eacc7242
 FROM_EMAIL=noreply@devcamper.io
 FROM_NAME=DevCamper
+S3_KEY=AKIAIUVRYCRZAGBU7DIQ
+S3_SECRET=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
+S3_ENDPOINT=arn:aws:s3:eu-central-1:127825626002:accesspoint/testing
+S3_REGION=eu-central-1
+S3_BUCKET=testlabs-covid-bucket
